package model;

import java.util.HashMap;

public class ConfigRss {
    public int maxTitleLength;
    public int maxBodyLength;
    public HashMap<String, String> Replaces;
}
